# metal-stats

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  pyproject.toml
api/: database.py  main.py  models.py
api/routers/: albums.py  bands.py  members.py  stats.py
data/: bandlist.csv
db/: duckdb_schema.sql  ingest.py
scraper/: checkpoint.py  geo_client.py  lastfm_client.py  ma_client.py  pipeline.py
tests/: test_phase0.py
